--- a/tres_en_raya.ipynb
+++ b/tres_en_raya.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -19,19 +19,23 @@
       "      _______________________\n",
       "      | 3 |  -  |  -  |  -  |\n",
       "      +---+-----+-----+-----+\n",
-      "      \n"
+      "      \n",
+      "empate\n",
+      "empate\n",
+      "empate\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El hueco está disponible\n",
-      "El hueco está disponible\n",
-      "['X', '-', '-', '-', 'O', '-', '-', '-', '-']\n",
-      "[1, 0, 0, 0, 4, 0, 0, 0, 0]\n",
-      "1\n",
-      " Jugador X ¡¡¡Has ganado!!!\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m     18\u001b[0m     coordenada_X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJUGADOR X, Dime la coordenada para tu ficha\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m     coordenada_O \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mJUGADOR O, Dime la coordenada para tu ficha\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m#igual con el jugador X\u001b[39;00m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m coordenada \u001b[38;5;129;01min\u001b[39;00m huecos_tablero:\n\u001b[1;32m     25\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m huecos_tablero\u001b[38;5;241m.\u001b[39mvalues() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ipykernel/kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1283\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1284\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1285\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1287\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ipykernel/kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -52,112 +56,134 @@
     "      '''\n",
     "print(tablero)\n",
     "\n",
-    "for coordenada in huecos_tablero:\n",
-    "# Juega X   \n",
-    " \n",
+    "while True:\n",
     "    coordenada_X = input('JUGADOR X, Dime la coordenada para tu ficha')\n",
-    "    while huecos_tablero[coordenada_X] != '-': #comprobando que el hueco está disponible\n",
-    "        print ('Ese hueco no está disponible')\n",
-    "        break\n",
-    "    else:    \n",
-    "        print('El hueco está disponible')#si lo está, cambia '-' por X\n",
-    "        huecos_tablero[coordenada_X]= 'X'\n",
+    "    coordenada_O = input('JUGADOR O, Dime la coordenada para tu ficha')#igual con el jugador X\n",
+    "\n",
+    "\n",
+    "\n",
+    "    for coordenada in huecos_tablero:\n",
+    "\n",
+    "        if '-' not in huecos_tablero:\n",
+    "            print('empate')\n",
+    "            break\n",
+    "# Juega X   \n",
+    "         \n",
+    "        if huecos_tablero[coordenada_X] == '-': #comprobando que el hueco está disponible\n",
+    "            print('El hueco está disponible')#si lo está, cambia '-' por X\n",
+    "            huecos_tablero[coordenada_X]= 'X'         \n",
+    "            \n",
+    "        else:    \n",
+    "             print ('Ese hueco no está disponible')\n",
+    "             coordenada_X = input('JUGADOR X, Dime la coordenada para tu ficha')\n",
     "\n",
     "# Juega O\n",
-    "    coordenada_O = input('JUGADOR O, Dime la coordenada para tu ficha')#igual con el jugador X\n",
-    "    while huecos_tablero[coordenada_O] != '-':\n",
-    "        print ('Ese hueco no está disponible')\n",
-    "        break\n",
-    "    else:\n",
-    "        print('El hueco está disponible')\n",
-    "        huecos_tablero[coordenada_O] = 'O'\n",
-    "        break\n",
-    "\n",
-    "lista_valores_tablero = list(huecos_tablero.values())\n",
-    "print (lista_valores_tablero)\n",
-    "\n",
-    "\n",
-    "\n",
-    "for espacio in range(len(lista_valores_tablero)):\n",
-    "\n",
-    "    if lista_valores_tablero[espacio] == 'X':\n",
-    "        lista_valores_tablero[espacio] = 1\n",
-    "\n",
-    "    elif lista_valores_tablero[espacio] == 'O':        \n",
-    "        lista_valores_tablero[espacio] = 4\n",
     "        \n",
-    "    else:\n",
-    "        lista_valores_tablero[espacio] = 0\n",
-    "\n",
-    "print (lista_valores_tablero)    \n",
-    "\n",
-    "\n",
-    "#a1,b1,c1,a2,b2,c2,a3,b3,c3\n",
-    "# 0, 1, 2, 3, 4, 5, 6, 7, 8\n",
-    "\n",
-    "#sustituir - por 0\n",
-    "#sustituir X por 1\n",
-    "#sustituir O por 4\n",
+    "        if huecos_tablero[coordenada_O] == '-':\n",
+    "            print('El hueco está disponible')\n",
+    "            huecos_tablero[coordenada_O] = 'O'\n",
+    "            \n",
+    "            \n",
+    "        else:\n",
+    "            print ('Ese hueco no está disponible')\n",
+    "            coordenada_O = input('JUGADOR O, Dime la coordenada para tu ficha')\n",
     "\n",
     "\n",
     "\n",
     "\n",
+    "        #a1-b1-c1\n",
+    "        if huecos_tablero['a1'] and huecos_tablero['b1'] and huecos_tablero['c1']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['a1'] and huecos_tablero['b1'] and huecos_tablero['c1']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #a2-b2-c2\n",
+    "        elif huecos_tablero['a2'] and huecos_tablero['b2'] and huecos_tablero['c2']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['a2'] and huecos_tablero['b2'] and huecos_tablero['c2']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #a3-b3-c3\n",
+    "        elif huecos_tablero['a3'] and huecos_tablero['b3'] and huecos_tablero['c3']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['a3'] and huecos_tablero['b3'] and huecos_tablero['c3']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #a1-a2-a3\n",
+    "        elif huecos_tablero['a1'] and huecos_tablero['a2'] and huecos_tablero['a3']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "\n",
+    "        elif huecos_tablero['a1'] and huecos_tablero['a2'] and huecos_tablero['a3']=='O':    \n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #b1-b2-b3\n",
+    "        elif huecos_tablero['b1'] and huecos_tablero['b2'] and huecos_tablero['b3']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['b1'] and huecos_tablero['b2'] and huecos_tablero['b3']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #c1-c2-c3\n",
+    "        elif huecos_tablero['c1'] and huecos_tablero['c2'] and huecos_tablero['c3']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['c1'] and huecos_tablero['c2'] and huecos_tablero['c3']=='O':    \n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #a1-b2-c3\n",
+    "        elif huecos_tablero['a1'] and huecos_tablero['b2'] and huecos_tablero['c3']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['a1'] and huecos_tablero['b2'] and huecos_tablero['c3']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        #a3-b2-c1\n",
+    "        elif huecos_tablero['a3'] and huecos_tablero['b2'] and huecos_tablero['c1']=='X':\n",
+    "            print('Ha ganado el jugador X')\n",
+    "            break\n",
+    "\n",
+    "        elif huecos_tablero['a3'] and huecos_tablero['b2'] and huecos_tablero['c1']=='O':\n",
+    "            print('Ha ganado el jugador O')\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            print ('error')\n",
+    "            break\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if sum(lista_valores_tablero[0,1,2])==3 or sum(lista_valores_tablero[3,4,5])==3 or sum(lista_valores_tablero[6,7,8])==3 or sum(lista_valores_tablero[0,3,6])==3 or sum(lista_valores_tablero[1,4,7])==3 or sum(lista_valores_tablero[2,5,8])==3 or sum(lista_valores_tablero[0,4,8])==3 or sum(lista_valores_tablero[2,4,6])==3:\n",
+    "    print('Ha ganado el jugador X')\n",
     "\n",
     "\n",
-    "#si suma de las lineas = 0, nada\n",
-    "#si suma de las lineas = 3 , X win\n",
-    "#si suma de las lineas = 12 , O win\n",
-    "#si suma de las lineas diferente a los anteriores, nada\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Comprobando win\n",
-    "\n",
-    "if sum(lista_valores_tablero[0:3])==3 or sum(lista_valores_tablero)==12:\n",
-    "    print(f'Ganador: jugador {huecos_tablero['a1']}')\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(sum(lista_valores_tablero[0:3]))\n",
-    "    ganador = huecos_tablero['a1']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') #cualquiera de las coordenadas. Vas a ser todas iguales\n",
-    "   \n",
-    "elif len (set(['a2','b2','c2']))==3 and ['a2','b2','c2'] != ['-','-','-']:\n",
-    "    print(len(set(['a2','b2','c2'])))\n",
-    "    ganador=huecos_tablero['a2']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
-    "\n",
-    "elif len (set(['a3','b3','c3']))==3 and ['a3','b3','c3'] != ['-','-','-']:\n",
-    "    print(len(set(['a3','b3','c3'])))\n",
-    "    ganador=huecos_tablero['a3']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!')\n",
-    "\n",
-    "elif len (set(['a1','a2','a3']))==3 and ['a1','a2','a3'] != ['-','-','-']:\n",
-    "    print(len(set(['a1','a2','a3'])))\n",
-    "    ganador=huecos_tablero['a1']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
-    "\n",
-    "elif len (set(['c1','c2','c3']))==3 and ['c1','c2','c3'] != ['-','-','-']:\n",
-    "    print(len(set(['c1','c2','c3'])))\n",
-    "    ganador=huecos_tablero['c1']    \n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!')\n",
-    "\n",
-    "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
-    "    print(len(set(['a1','b2','c3'])))\n",
-    "    ganador=huecos_tablero['a1']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
-    "\n",
-    "elif len (set(['a1','b2','c3']))==3 and ['a1','b2','c3'] != ['-','-','-']:\n",
-    "    print(len(set(['a3','b2','c1'])))\n",
-    "    ganador=huecos_tablero['a3']\n",
-    "    print(f' Jugador {ganador} ¡¡¡Has ganado!!!') \n",
+    "elif sum(lista_valores_tablero[0,1,2])==12 or sum(lista_valores_tablero[3,4,5])==12 or sum(lista_valores_tablero[6,7,8])==12 or sum(lista_valores_tablero[0,3,6])==12 or sum(lista_valores_tablero[1,4,7])==12 or sum(lista_valores_tablero[2,5,8])==12 or sum(lista_valores_tablero[0,4,8])==12 or sum(lista_valores_tablero[2,4,6])==12:\n",
+    "    print('Ha ganado el jugador O') \n",
     "\n",
     "else:\n",
-    "\n",
-    "    print(huecos_tablero)\n",
-    "        \n",
-    "  \n",
-    "\n"
+    "    print ('Error')"
    ]
   }
  ],
