--- a/tres_en_raya.ipynb
+++ b/tres_en_raya.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,13 @@
     "        ['a1', 'a2', 'a3'], ['b1', 'b2', 'b3'], ['c1', 'c2', 'c3'],  # Columnas\n",
     "        ['a1', 'b2', 'c3'], ['a3', 'b2', 'c1']  # Diagonales\n",
     "    ]\n",
-    "    \n",
     "    # Revisamos si alguna combinación tiene el mismo valor (X o O)\n",
     "    for combo in combinaciones_ganadoras:\n",
     "        if huecos_tablero[combo[0]] == huecos_tablero[combo[1]] == huecos_tablero[combo[2]] and huecos_tablero[combo[0]] != '-':\n",
     "            return huecos_tablero[combo[0]]  # Retornamos 'X' o 'O' según quien ganó\n",
-    "    \n",
     "    # Comprobar si hay empate\n",
     "    if '-' not in huecos_tablero.values():\n",
     "        return 'E'  # Empate\n",
-    "    \n",
     "    return # No hay ganador ni empate si devuelve None   \n",
     "\n",
     "# Funcion principal del juego\n",
@@ -60,9 +57,7 @@
     "        elif resultado == \"E\":\n",
     "            print('Empate! 😮')\n",
     "            break\n",
-    "        \n",
-    "        print(\"-------------------\")\n",
-    "        \n",
+    "\n",
     "        # Juega X \n",
     "        coordenada_X = (input('JUGADOR X, Dime la coordenada para tu ficha')).lower()\n",
     "        print(f\"Jugador X: {coordenada_X}\")\n",
@@ -70,19 +65,14 @@
     "            print('El hueco está disponible')#si lo está, cambia '-' por X\n",
     "            huecos_tablero[coordenada_X]= 'X'\n",
     "            imprimir_tablero(huecos_tablero)\n",
-    "            # Comprobamos si el jugador X ha ganado o empatado en su ultima jugada para parar el bucle \n",
-    "            if resultado == \"X\" or resultado == \"E\":\n",
-    "                # Comprobamos si hay ganador o empate antes de volver a iniciar la jugada\n",
-    "                resultado = comprobar_ganador(huecos_tablero)\n",
-    "                if resultado == \"X\":\n",
-    "                    print('Ha ganado el jugador X! Enhorabuena 🎉🎉🎉')\n",
-    "                    break\n",
-    "                elif resultado == \"O\":\n",
-    "                    print('Ha ganado el jugador O! Enhorabuena 🎉🎉🎉')\n",
-    "                    break\n",
-    "                elif resultado == \"E\":\n",
-    "                    print('Empate! 😮')\n",
-    "                    break             \n",
+    "            # Comprobamos si hay ganador o empate antes de volver a iniciar la jugada\n",
+    "            resultado = comprobar_ganador(huecos_tablero)\n",
+    "            if resultado == \"X\":\n",
+    "                print('Ha ganado el jugador X! Enhorabuena 🎉🎉🎉')\n",
+    "                break\n",
+    "            elif resultado == \"E\":\n",
+    "                print('Empate! 😮')\n",
+    "                break             \n",
     "        else:    \n",
     "            print ('Ese hueco no está disponible. Indique otro por favor')\n",
     "        \n",
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +111,6 @@
       "| 3 |  -  |  -  |  -  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
-      "-------------------\n",
       "Jugador X: b2\n",
       "El hueco está disponible\n",
       "\n",
@@ -148,7 +137,6 @@
       "| 3 |  -  |  -  |  -  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
-      "-------------------\n",
       "Jugador X: b1\n",
       "El hueco está disponible\n",
       "\n",
@@ -162,6 +150,32 @@
       "| 3 |  -  |  -  |  -  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
+      "Jugador O: b3\n",
+      "El hueco está disponible\n",
+      "\n",
+      "    +-----+-----+-----+\n",
+      "    |  a  |  b  |  c  |\n",
+      "_______________________\n",
+      "| 1 |  O  |  X  |  -  |\n",
+      "_______________________\n",
+      "| 2 |  -  |  X  |  -  |\n",
+      "_______________________\n",
+      "| 3 |  -  |  O  |  -  |\n",
+      "+---+-----+-----+-----+\n",
+      "\n",
+      "Jugador X: c3\n",
+      "El hueco está disponible\n",
+      "\n",
+      "    +-----+-----+-----+\n",
+      "    |  a  |  b  |  c  |\n",
+      "_______________________\n",
+      "| 1 |  O  |  X  |  -  |\n",
+      "_______________________\n",
+      "| 2 |  -  |  X  |  -  |\n",
+      "_______________________\n",
+      "| 3 |  -  |  O  |  X  |\n",
+      "+---+-----+-----+-----+\n",
+      "\n",
       "Jugador O: c1\n",
       "El hueco está disponible\n",
       "\n",
@@ -172,11 +186,10 @@
       "_______________________\n",
       "| 2 |  -  |  X  |  -  |\n",
       "_______________________\n",
-      "| 3 |  -  |  -  |  -  |\n",
+      "| 3 |  -  |  O  |  X  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
-      "-------------------\n",
-      "Jugador X: b3\n",
+      "Jugador X: a3\n",
       "El hueco está disponible\n",
       "\n",
       "    +-----+-----+-----+\n",
@@ -186,7 +199,7 @@
       "_______________________\n",
       "| 2 |  -  |  X  |  -  |\n",
       "_______________________\n",
-      "| 3 |  -  |  X  |  -  |\n",
+      "| 3 |  X  |  O  |  X  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
       "Jugador O: a2\n",
@@ -199,10 +212,23 @@
       "_______________________\n",
       "| 2 |  O  |  X  |  -  |\n",
       "_______________________\n",
-      "| 3 |  -  |  X  |  -  |\n",
+      "| 3 |  X  |  O  |  X  |\n",
       "+---+-----+-----+-----+\n",
       "\n",
-      "Ha ganado el jugador X! Enhorabuena 🎉🎉🎉\n"
+      "Jugador X: c2\n",
+      "El hueco está disponible\n",
+      "\n",
+      "    +-----+-----+-----+\n",
+      "    |  a  |  b  |  c  |\n",
+      "_______________________\n",
+      "| 1 |  O  |  X  |  O  |\n",
+      "_______________________\n",
+      "| 2 |  O  |  X  |  X  |\n",
+      "_______________________\n",
+      "| 3 |  X  |  O  |  X  |\n",
+      "+---+-----+-----+-----+\n",
+      "\n",
+      "Empate! 😮\n"
      ]
     }
    ],
